--- a/manifest/b-api.yaml
+++ b/manifest/b-api.yaml
@@ -1,16 +1,26 @@
 apiVersion: backstage.io/v1alpha1
-kind: Component
+kind: API
 metadata:
-  name: artist-web
+  name: artist-api
   annotations:
      backstage.io/kuberbetes-namespace: A
-  description: The place to be, for great artists
+  description: Retrieve artist details
 spec:
-  type: website
+  type: openapi
   lifecycle: production
   owner: artist-relations-team
   system: artist-engagement-portal
-  dependsOn:
-    - resource:default/artists-db
-  providesApis:
-    - artist-api
+  definition: |
+    openapi: "3.0.0"
+    info:
+      version: 1.0.0
+      title: Artist API
+      license:
+        name: MIT
+    servers:
+      - url: http://artist.spotify.net/v1
+    paths:
+      /artists:
+        get:
+          summary: List all artists
+    ...
